--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id="right" class="button">右</div>
         <div id="drop" class="button">落とす</div>
     </div>
-    <audio id="bgm" src="bgm.wav loop></audio>  <!-- 音楽ファイルの追加 -->
+    <audio id="bgm" src="bgm.mp3 loop></audio>  <!-- 音楽ファイルの追加 -->
     <script src="game.js"></script>
 </body>
 </html>
