--- a/index.html
+++ b/index.html
@@ -3,49 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>フルーツゲーム</title>
+    <title>スマホ版スイカゲーム</title>
     <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #f0f8ff;
+            margin: 0;
+        }
+
         #gameCanvas {
-            border: 1px solid yellow;  /* 枠を黄色に設定 */
-            background-color: lightblue;  /* 背景色を設定 */
-            display: block;
-            margin: 0 auto;
-            position: relative;  /* 雲を配置するための相対位置 */
+            background-color: #ffebcd;
+            border: 2px solid #d2691e;
         }
-        #score {
-            text-align: center;
-            font-size: 24px;
-        }
-        #ready {
-            text-align: center;
-            font-size: 36px;
-            display: none;
-        }
-        #controls {
-            text-align: center;
+
+        .controls {
             margin-top: 10px;
         }
+
         .button {
-            display: inline-block;
-            padding: 10px;
+            padding: 10px 20px;
+            font-size: 16px;
             margin: 5px;
-            background-color: #ddd;
-            border: 1px solid #aaa;
-            border-radius: 5px;
-            cursor: pointer;
+        }
+
+        #score {
+            font-size: 20px;
+            margin-top: 10px;
+        }
+
+        #ready {
+            font-size: 24px;
+            color: red;
         }
     </style>
 </head>
 <body>
+    <div id="score">スコア: 0 (最高: 0)</div>
     <div id="ready">Ready!</div>
-    <div id="score">スコア: 0</div>
-    <canvas id="gameCanvas" width="600" height="400"></canvas>
-    <div id="controls">
-        <div id="left" class="button">左</div>
-        <div id="right" class="button">右</div>
-        <div id="drop" class="button">落とす</div>
+    <canvas id="gameCanvas" width="400" height="600"></canvas>
+    <div class="controls">
+        <button id="left" class="button">← 左</button>
+        <button id="drop" class="button">落とす</button>
+        <button id="right" class="button">右 →</button>
     </div>
-    <audio id="bgm" src="bgm.mp3 loop></audio>  <!-- 音楽ファイルの追加 -->
+    <audio id="bgm" src="bgm.mp3" loop></audio>
     <script src="game.js"></script>
 </body>
 </html>
