--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
         <button id="right" class="button">右 →</button>
     </div>
     <audio id="bgm" src="bgm.mp3" loop></audio>
-    <script src="game.js" defer></script>
+    <script src="game.js"></script>
 </body>
 </html>
