--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <body>
     <div id="score">スコア: 0 (最高: 0)</div>
     <canvas id="gameCanvas" width="400" height="600"></canvas>
+    <div id="ready">ready!<div>
     <div class="controls">
         <button id="left" class="button">← 左</button>
         <button id="drop" class="button">落とす</button>
