--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 </head>
 <body>
     <div id="score">スコア: 0 (最高: 0)</div>
+    <div id="ready">Ready!</div>
     <canvas id="gameCanvas" width="400" height="600"></canvas>
-    <div id="ready">ready!<div>
     <div class="controls">
         <button id="left" class="button">← 左</button>
         <button id="drop" class="button">落とす</button>
